# cpp5

./: CMakeLists.txt  README.md  doxygen.conf  doxygen.conf.in  hash.md5  main.cpp  main03.cpp  my_allocator03.h  my_allocator11.h  my_ip.cpp  my_ip.h  my_list.h  my_set.cpp  my_set.h  rez.txt  run.sh  task.txt  test_ip_filter.cpp
.github/workflows/: c-cpp.yml  doxygen-gh-pages.yml
UI/: CMakeLists.txt  window.cpp  window.h
UI/event/: CMakeLists.txt  event.cpp  event.h
UI/widget/: CMakeLists.txt  widget.cpp  widget.h
UI/widget/button/: button.h  create_document.h  create_shape.cpp  delete_shape.cpp  export_document.cpp  import_document.cpp
UI/widget/dimension/: dimension.h
controller/: controller.h
model/: model.h
view/: view.h
